# NativePractice

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/test/eastern/com/nativetest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_crash_test.cpp
app/src/main/cpp/breakpad/: CMakeLists.txt  breakpad_lib.cc  breakpad_lib.h
app/src/main/cpp/common/: CMakeLists.txt  common.cpp  common.h
app/src/main/cpp/sub_module/: CMakeLists.txt  sub_module.cpp  sub_module.h
app/src/main/java/test/eastern/com/nativetest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/test/eastern/com/nativetest/: ExampleUnitTest.kt
